--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ body {
     color: white;
 }
 
+#weather {
+    height: 380px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 #widget-footer {
     display: flex;
     justify-content: space-between;
