Changement de police d'écriture

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Itim", serif;
     background-color: white;
     display: flex;
     justify-content: center;
