--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     padding: 15px 0px 15px 15px;
     border-bottom: 2px solid white;
     color: white;
+    font-size: 1.2rem;
 }
 
 #weather {
@@ -26,10 +27,21 @@ body {
     align-items: center;
 }
 
+.temperature {
+    font-size: 5rem;
+    margin: 0 0 1rem 0;
+}
+
+#description, #city {
+    font-size: 1.5rem;
+    margin: 0 0 1rem 0;
+}
+
 #widget-footer {
     display: flex;
     justify-content: space-between;
     padding: 0px 40px 0px 40px;
     border-top: 2px solid white;
     color: white;
+    font-size: 1.2rem;
 }
