--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
     width: 400px;
     background: rgb(5, 75, 135);
     border-radius: 10px;
+    border: 2px solid white;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.3);
 }
 
 #widget-header {
